[gd_scene load_steps=8 format=3 uid="uid://drl7ifd1pyugs"]

[ext_resource type="Script" uid="uid://bo22xdyxp28k0" path="res://main_menu.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://bh1xbvx26fl4m" path="res://assets/button和各种贴图/logo.png" id="2_7vrkn"]
[ext_resource type="VideoStream" uid="uid://d4lwrqlki24tw" path="res://assets/button和各种贴图/主页背景.ogv" id="2_fu7sn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fu7sn"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glbon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlkkf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_06t4h")
metadata/_edit_use_anchors_ = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 776.8889
offset_bottom = 437.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
stream = ExtResource("2_fu7sn")
autoplay = true
expand = true
loop = true
metadata/_edit_use_anchors_ = true

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(275, 235)
scale = Vector2(0.32154173, 0.3215417)
texture = ExtResource("2_7vrkn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.08680555
anchor_top = 0.63580245
anchor_right = 0.16927083
anchor_bottom = 0.90123457
grow_vertical = 0
theme_override_constants/separation = 12
metadata/_edit_use_anchors_ = true

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
self_modulate = Color(0.9647059, 1, 0.9647059, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_fu7sn")
theme_override_styles/normal_mirrored = SubResource("StyleBoxLine_jix8l")
text = "NEW GAME"
alignment = 0
autowrap_trim_flags = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
self_modulate = Color(0.9647059, 1, 0.9647059, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/normal_mirrored = SubResource("StyleBoxLine_jix8l")
text = "SETTINGS"
alignment = 0
autowrap_trim_flags = 0

[node name="StoryButton" type="Button" parent="VBoxContainer"]
self_modulate = Color(0.9647059, 1, 0.9647059, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxLine_jix8l")
text = "STORY"
alignment = 0
autowrap_trim_flags = 0

[node name="ExitButton" type="Button" parent="VBoxContainer"]
self_modulate = Color(0.9647059, 1, 0.9647059, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxLine_jix8l")
text = "EXIT"
alignment = 0
autowrap_trim_flags = 0

[node name="SettingsPopup" type="Window" parent="."]
oversampling_override = 1.0
visible = false

[node name="BGMVolumeSlider" type="HSlider" parent="SettingsPopup"]
offset_right = 8.0
offset_bottom = 16.0
size_flags_horizontal = 4

[node name="SoundEffectSlider" type="HSlider" parent="SettingsPopup"]
offset_right = 8.0
offset_bottom = 16.0

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
